# opengl_tut

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
app/: main.cpp
libs/: Animal.h
tests/: CMakeLists.txt  unit_tests.cc
